subdir('gawl')

imgview_deps = gawl_core_deps + gawl_graphic_deps + gawl_textrender_deps + gawl_fc_deps

imgview_files =  files(
    'file-list.cpp',
    'imgview.cpp',
    'sort.cpp',
    'main.cpp',
    'displayable/image.cpp',
    'displayable/text.cpp',
) + gawl_core_files + gawl_graphic_files + gawl_polygon_files + gawl_textrender_files + gawl_fc_files + gawl_no_touch_callbacks_file
